glFusion ChangeLog

v1.1.0
------------
- Implemented glFusion CSS layout driven header / footer functions.
        public_html/lib-common.php
        public_html/layout/nouveau/functions.php
        public_html/layout/professional/functions.php

- Bumped version number to 1.1.0svn
        public_html/lib-common.php

v1.0.1
------
- Added new VideoEmbed plugin for FCKeditor
        public_html/fckeditor/fckconfig.js
        public_html/fckeditor/myconfig.js
        public_html/fckeditor/editor/plugins/video/fckplugin.js
        public_html/fckeditor/editor/plugins/video/readme.txt
        public_html/fckeditor/editor/plugins/video/video.php
        public_html/fckeditor/editor/plugins/video/css/style.css
        public_html/fckeditor/editor/plugins/video/images/video.gif
        public_html/fckeditor/editor/plugins/video/jscripts/functions.js
        public_html/fckeditor/editor/plugins/video/langs/english.php
        public_html/fckeditor/editor/plugins/video/templates/embed.thtml
        public_html/fckeditor/editor/plugins/video/templates/embed_body.thtml

- Changed 'domready' events to 'load' events to solve IE domready bug.
        public_html/layout/nouveau/functions.php

- Fixed language file errors - missing comma caused error
        private/language/german.php
        private/language/german_formal.php
        private/language/german_formal_utf-8.php
        private/language/hebrew_utf-8.php

- Terminate a user's session if banned
        public_html/admin/user.php
        private/system/lib-security.php
        private/system/lib-sessions.php

- Stylesheet clean up
        public_html/layout/professional/style.css

- Fixed xhtml validation bug (issue 176) (Eric)
		public_html/layout/nouveau/style.css
		public_html/layout/nouveau/style-colors.css
		public_html/layout/nouveau/admin/story/storyeditor_advanced.thtml

- Fixed issue with IE7 displaying drop down menu with new em measurements
        public_html/layout/nouveau/css/ie7.css
